--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -7,7 +7,6 @@
 .App {
   text-align: left;
   height: 100vh;
-  overflow: hidden;
 }
 
 .App-logo {
@@ -28,7 +27,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  font-size: calc(10px + 2vmin);
+  font-size: 2vmin;
   color: var(--grey);
   position: relative;
   z-index: 20;
