--- a/react-app/src/pages/InvestingAdvice.css
+++ b/react-app/src/pages/InvestingAdvice.css
@@ -1,6 +1,7 @@
 .stock-window {
-    width: 90%;
+    padding: 0 5%;
     text-align: left;
+    background-color: var(--background-colour);
 }   
 
 .upload {
